--- a/src/resources/jdbc.properties
+++ b/src/resources/jdbc.properties
@@ -8,7 +8,7 @@ driver=com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost:3306/bbs?useUnicode=true&characterEncoding=UTF-8&useSSL=FALSE&serverTimezone=UTC&useOldAliasMetadataBehavior=true
 username=root
 #下面输入自己数据库的密码
-password=camwlw0610
+password=123456
 #定义初始连接数
 initialSize=0
 #定义最大连接数
